
syntax = "proto3";

option go_package = "./proto";

package proto;

import "google/protobuf/timestamp.proto";

service WishlistService {

  rpc CreateWishlist(CreateWishlistRequest) returns (CreateWishlistResponse) {}

}

message CreateWishlistRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
  bool isPublic = 4;
}

message CreateWishlistResponse {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  bool isPublic = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp lastModified = 7;
	google.protobuf.Timestamp latOpened = 8;
}
